--- a/index.html
+++ b/index.html
@@ -13,6 +13,41 @@
     <link rel="stylesheet" href="./css/button.css">
 </head>
 <body>
+    <main>
+        
+       <div> <h1>Sign-up</h1> 
+        <footer>
+            <a href="#">Privacy policy</a>
+            <span> &amp;</span>
+            <a href="#">terms of service</a>
+        </footer>
+    </div>
+        <div>
+            <form>
+                <div>
+                    <label for="username">Username</label>
+                    <input id="username" type="text" required>
+                </div>
+                <div>
+                    <label for="email">E-mail</label>
+                    <input id="email" type="email" required>
+                </div>
+                <div>
+                    <label for="password">Password</label>
+                    <input id="password" type="password" required>
+                </div>
+                <div>
+                    <label for="re_pass">Repeat password</label>
+                    <input id="re_pass" type="password" required>
+                </div>
+                <div>
+                    <div>Get started</div>
+                    <span>or</span>
+                    <a  href="#">Sign in</a>
+                </div>
+            </form>
+        </div>
+    </main>
     
 </body>
 </html>
