--- a/index.html
+++ b/index.html
@@ -15,33 +15,40 @@
 <body>
     <main>
         
-       <div> <h1>Sign-up</h1> 
+       <div class="left-column"> <h1>Sign-up</h1> 
         <footer>
             <a href="#">Privacy policy</a>
             <span> &amp;</span>
             <a href="#">terms of service</a>
         </footer>
     </div>
-        <div>
-            <form>
-                <div>
+        <div class="right-column">
+            <div class="close">
+                <a href="https://www.youtube.com/">X</a></div>
+            <form class="form">
+                <div class="form-row">
                     <label for="username">Username</label>
+                    <br>
                     <input id="username" type="text" required>
                 </div>
-                <div>
+                <div class="form-row">
                     <label for="email">E-mail</label>
+                    <br>
                     <input id="email" type="email" required>
                 </div>
-                <div>
+                <div class="form-row">
                     <label for="password">Password</label>
+                    <br>
                     <input id="password" type="password" required>
                 </div>
-                <div>
+                <br>
+                <div class="form-row">
                     <label for="re_pass">Repeat password</label>
+                    <br>
                     <input id="re_pass" type="password" required>
                 </div>
-                <div>
-                    <div>Get started</div>
+                <div class="form-row">
+                    <div class="btn">Get started</div>
                     <span>or</span>
                     <a  href="#">Sign in</a>
                 </div>
